[project]
name = "echo-video"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "beartype>=0.21.0",
    "braceexpand>=0.1.7",
    "dask>=2024.8.0",
    "einops>=0.8.1",
    "fire>=0.7.0",
    "ftfy>=6.3.1",
    "h5py>=3.14.0",
    "iopath>=0.1.10",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "mypy>=1.17.1",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "peft>=0.17.0",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "ruff>=0.4.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "submitit>=1.5.3",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
    "wandb>=0.21.1",
    "webdataset>=0.2.100",
]


[tool.ruff]
line-length = 100
target-version = "py39"  # or your Python version
fix = true  # Enables auto-fix

# Enable Ruff rules (or presets) that cover formatting + unused imports
select = [
  "F",     # Pyflakes (e.g. unused imports)
  "E",     # pycodestyle errors
  "I",     # isort (import sorting)
  "W",     # pycodestyle warnings
  "ANN",  # flake8-annotations (missing or incorrect type hints)
  "TCH",  # flake8-type-checking (suggest moving typing imports into TYPE_CHECKING blocks)
  "UP",  # flake8-unused-params (unused function parameters)
]

# Optionally: ignore specific rules
# ignore = ["E501"]  # e.g. line too long
# Enable automatic fixing for selected rules
fixable = ["F", "E", "I", "W"]

# Optional: Exclude certain folders
exclude = ["venv", "__pycache__"]
[tool.ruff.format]
docstring-code-format = true  # Optional: also format code in docstrings
quote-style = "double"
indent-style = "space"
line-ending = "lf"
